--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "character-generator",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
     "file-dialog": "0.0.7",
     "react": "^16.8.6",
@@ -14,9 +15,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "electron": "electron . --disable-gpu",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build:win": "electron-packager ./ --app-version=1.0 --app-copyright=PascalBurg  --arch=ia32 --platform=win32 --asar --ignore=.idea --out=electronBuild/ --overwrite=true  --build-version=1.0 --app-bundle-id=Marvelator",
+    "build:linux": "electron-packager ./ --app-version=1.0 --app-copyright=PascalBurg  --arch=x64 --platform=linux --ignore=.idea --out=electronBuild/ --overwrite=true --build-version=1.0 --app-bundle-id=Marvelator"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron-packager": "^14.0.4",
+    "electron": "^6.0.1"
   }
 }
